assets/scss/_header.scss
:root {
    --header-height-desktop: 72px;
    --header-height-mobile: 64px;
}


.header {
    z-index: 999;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;

    &.header--fixed {
        z-index: 999;
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        transition: clip-path $trans--400, opacity $trans--400;
        pointer-events: none;

        .header__wrapper {
            position: relative;
            z-index: 999;
            transform: translateY(calc(var(--header-height-desktop) * (-1)));
            background-color: $color-default-white;

            @include vp-1023 {
                transform: translateY(calc(var(--header-height-mobile) * (-1)));
            }
        }
    }

    &--fixed.header--inner {
        pointer-events: initial;

        .header__wrapper {
            transform: translate(0, 0);

            @include vp-1023 {
                transform: translate(0, 0);
            }
        }
    }
    
    &--fixed.header--inner.active {
        .header__wrapper {
            @include vp-1023 {
                background-color: $color-default-white;
            }
        }
    }

    &--fixed.animate {
        .header__wrapper {
            transition: background-color $trans--400, transform $trans--400;
        }
    }

    &--inner.active {
        .header__wrapper {
            @include vp-1023 {
                background-color: $color-default-white;
            }
        }
    }

    &--transparent {
        .header__wrapper {
            background-color: rgba($color-default-white, 0);
        }
    }

    @include vp-1023 {
        width: 100vw;
    }
}

.scroll-up {
    .header--fixed {
        pointer-events: initial;

        .header__wrapper {
            transform: translateY(0);
        }
    }
}

.header__wrapper {
    display: grid;
    grid-template-columns: min-content 1fr;
    column-gap: 16px;
    padding: 12px 0;

    @include vp-1023 {
        display: block;
    }
}

.header__inner-wrapper {
    display: grid;
    grid-template-columns: 1fr min-content min-content;
    justify-content: center;
    justify-items: end;
    align-items: center;
    column-gap: 16px;

    @include vp-1439 {
    }

    @include vp-1023 {
        z-index: 99;
        position: fixed;
        top: calc(var(--header-height-mobile) - 1px);
        left: 0;
        display: grid;
        grid-template-columns: 1fr min-content;
        justify-content: initial;
        align-content: space-between;
        justify-items: initial;
        align-items: initial;
        width: 100%;
        height: 100%;
        min-height: calc(100vh - var(--header-height-mobile));
        height: calc(100vh - var(--header-height-mobile));
        padding-bottom: 10px;
        padding-left: 0;
        padding-right: 8px;
        // overflow-y: auto;
        transition: clip-path $trans--600;
        clip-path: inset(0 0 100% 0);
        // -webkit-overflow-scrolling:touch;

        background-color: $color-default-white;
    }
}

.header__nav {
    @include vp-1023 {
        grid-column: 1 / 3;
        -webkit-overflow-scrolling:touch;
        overflow: auto;
        height: 100%;
        overflow: -moz-scrollbars-none;
        scrollbar-width: none;

        &::-webkit-scrollbar {
            width: 0;
            display: none;
        }
    }
}

.header__lang-toggle {
    position: relative;

    &::after {
        content: '';
        position: absolute;
        top: 50%;
        left: -8px;
        width: 1px;
        height: 16px;
        background-color: $color-whisper;
        transform: translateY(-50%);

        @include vp-1023 {
            display: none;
        }
    }

}

.header.active {
    .header__inner-wrapper {
        @include vp-1023 {
            clip-path: inset(0 0 0 0);
            padding-right: 8px;
        }
    }

    .menu-toggle-btn__icon {
        &--open {
            display: none;
        }

        &--close {
            display: block;
        }
    }
}

